fixed: fixed font family ,Http client error  and refactor json file name

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,5 @@
 body {
   background-color: #4f6883;
   margin: 0;
-  font-family:IRANsans sans-serif;
-  height: 100%;
+  font-family: IRANsans, serif;
 }
