update: updated svg colors, updated search box styles fixed: deleted some extra classes and fixed search list styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="d-main">
+<main class="d-main py-0" style="font-size: 14px">
     <app-menu></app-menu>
     <app-search></app-search>
 </main>
