--- a/src/app/components/search/search-box/search-box.component.html
+++ b/src/app/components/search/search-box/search-box.component.html
@@ -1,7 +1,7 @@
 <div class="w-full overflow-auto bg-white">
-  <h6 class="mx-3 pt-3">جستوجو</h6>
+  <h6 class="mx-3 pt-3">جستجو</h6>
   <div class="my-3">
-    <form class="form-inline mx-2 my-3">
+    <form class="form-inline mx-2 my-3 ">
       <input class="form-control mr-sm-2" type="search" placeholder="جستجوی نماد" aria-label="Search">
     </form>
   </div>
