--- a/src/app/components/search/search-list/search-list.component.scss
+++ b/src/app/components/search/search-list/search-list.component.scss
@@ -1,7 +1,9 @@
+@import '../../../../styles/variables';
+
 .cvt{
-  font-size: 13px;
+  font-size: $font-size-base;
   max-width: 115px;
   :hover{
-    background-color: #f2f2f2;
+    background-color: $bg-list-focus;
   }
 }
