add: add a service for using to hide and show components when clicked on their buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <main class="d-main py-0" style="font-size: 14px">
-    <app-menu></app-menu>
-    <app-search></app-search>
+  <app-menu></app-menu>
+
+  <app-search *ngIf="isSearchVisible"></app-search>
 </main>
