--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="main rounded-r-2xl overflow-hidden fixed w-max">
+<div class="main rounded-r-2xl overflow-hidden w-max">
 
     <app-search-box></app-search-box>
 
