add: create market watch component and first styling for editing buttons in this component

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -47,7 +47,7 @@
       </li>
     </ul>
 
-    <ul class=" pt-3.5 w-full">
+    <ul class=" pt-3.5">
       <li class="menu-item-tab rounded-r-lg cursor-pointer">
         <div class="writing-mode">
           <ng-container> دیده‌بان</ng-container>
