--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $bg-color: #4f6883;
 $bg-list-focus:#f2f2f2;
-$bg-hover-active:#e3e8f1;
+$bg-hover-active:#dee3ec;
+$text-color:#6c757d;
 
 $font-size-base: 13px;
